# skyscraper

./: pyproject.toml
src/skyscraper/: indeed_job.py  skyscrape.py
