[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skyscraper"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"beautifulsoup4 ~= 4.11",
"chromedriver_binary_auto ~= 0.3",
"selenium ~= 4.19",
"lxml ~= 5.1"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"